Revise index.html for personal website
Updated the content and structure of the personal website.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>期中個人履歷網站</title>
+    <title>hwenn's website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -115,4 +115,5 @@
     <h4>Made by HSIAO,HSIAO-WEN</h4>
 </footer>
 </body>
+
 </html>
