Fix HTML structure and update image paths

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <section id="about">
             <div class="picture1">
-                <img src="image/大頭照.jpg">
+                <img src="images/大頭照.jpg">
             </div>
             <div class="name">
                 <p>
@@ -81,13 +81,13 @@
         <section id="experience">
             <div class="pic">
                 <div class="r">
-                    <img class="picture2"src="image/社博.jpg">
+                    <img class="picture2"src="images/社博.jpg">
                     <h1 class="title": rgb(15, 135, 191)>社團經驗</h1>
                 </div>
                 
                 <div class="row">
-                   <img src="image/嘻研社大成.jpg">
-                   <img src="image/迎新活動照.jpg">
+                   <img src="images/嘻研社大成.jpg">
+                   <img src="images/迎新活動照.jpg">
                 </div>
             </div>
             <div class="exp-text">
@@ -97,7 +97,7 @@
                 </div>
                 <div class="exp-text2">
                   <p>左邊的圖片呈現的分別是今年的社博表演、上學期的大成表演與本屆的迎新活動照，而我表演過的舞風有Hiphop、Popping及Locking，目前也一直不斷在精進自己在這三個舞風的能力。</p>
-                  <img src="image/全人認證.jpg">
+                  <img src="images/全人認證.jpg">
                 </div>
             </div>
             
@@ -117,3 +117,4 @@
 </body>
 
 </html>
+
